# fund-sage

./: .env copy  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  exceptions.py  provisiondb.py  pyproject.toml  pytest.ini  pytest_report.txt  test_dal.sh  tests_all.sh  tests_bl.sh  tests_dal.sh  tests_utils.sh
IaC/: IaC_awscdk_masterplan.md
IaC/cdk/: .env copy  README.md  assume_role.sh  build-and-push-image.sh  cdk.context.json  cdk.json  cdk.sh  config.ts  package-lock.json  package.json
api/: __init__.py  __init__.py.bak  authentication.py  middleware.py  swagger_setup.py
api/routes/: applicants.py  applications.py  auth.py  schemes.py
api/schemas/: administrator_schema.py  all_schemas.py  applicant_schema.py  application_schema.py  household_member_schema.py  scheme_schema.py
bl/factories/: base_scheme_eligibility_checker_factory.py  scheme_eligibility_checker_factory.py
bl/schemes/: base_eligibility.py  default_eligibility.py  middleaged_reskilling_assistance_eligibility.py  retrenchment_assistance_eligibility.py  (+5 more)
dal/: crud_operations.py  custom_serializer.py  database.py  models.py  provisiondb.py  system_config.py
docs/: api_design.md  api_testing.md  bl_design.md  db_design.md  deployment_guide.md  openapi.yaml  setup_VSCode_for_debugging.md  setup_guide_for_dev.md  sw__eng_principles.md  testing_strategy.md
init-db/: create_db_ephemeral.sql
tests/: conftest.py  test_applicant_service.py  test_crud.py  test_system_configurations.py
utils/: config_utils.py  data_validation.py  date_utils.py  error_handling.py
(+35 files in other folders)
